JumpScript/tests/baselines/reference/exportEqualMemberMissing.errors.txt
tests/cases/compiler/exportEqualMemberMissing_1.jump(3,23): error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.


==== tests/cases/compiler/exportEqualMemberMissing_1.jump (1 errors) ====
    ///<reference path='exportEqualMemberMissing_0.jump'/>
    import connect = require('./exportEqualMemberMissing_0');
    connect().use(connect.static('foo')); // Error	1	The property 'static' does not exist on value of type ''.
                          ~~~~~~
!!! error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.
    
==== tests/cases/compiler/exportEqualMemberMissing_0.jump (0 errors) ====
    module server {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
    